syntax = "proto3";

package tools.teal.demoapp.dto.v1;

import "google/protobuf/timestamp.proto";

message Money {
  double amount = 1;
  string currency = 2;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
  string country = 5;
  optional int64 number = 6;
  optional string complement = 7;
}

message CreditCard {
  google.protobuf.Timestamp expiration_date = 1;
  string number = 2;
  string holder_name = 3;
  int32 security_code = 4;
}

message DebitCard {
  google.protobuf.Timestamp expiration_date = 1;
  string number = 2;
  string holder_name = 3;
  int32 security_code = 4;
}

message PayPal {
  string email = 1;
  string password = 2;
}

message PaymentMethod {
  string id = 1;
  Money amount = 2;
  oneof option {
    CreditCard credit_card = 3;
    DebitCard debit_card = 4;
    PayPal pay_pal = 5;
  }
}

message Product {
  string description = 1;
  string name = 2;
  string brand = 3;
  string category = 4;
  string unit = 5;
  string sku = 6;
}

message InventoryItem {
  string id = 1;
  string inventory_id = 2;
  Product product = 3;
  string cost = 4;
  int32 quantity = 5;
}

message CatalogItem {
  string id = 1;
  string catalog_id = 2;
  string inventory_id = 3;
  Product product = 4;
  string cost = 5;
  double markup = 6;
  int32 quantity = 7;
}

message CartItem {
  string id = 1;
  Product product = 2;
  int32 quantity = 3;
  Money unit_price = 4;
}

message OrderItem {
  string id = 1;
  Product product = 2;
  int32 quantity = 3;
  Money unit_price = 4;
}

message Profile {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  optional google.protobuf.Timestamp birthdate = 4;
  string gender = 5;
}

message ShoppingCart {
  string id = 1;
  string customer_id = 2;
  string status = 3;
  optional Address billing_address = 4;
  optional Address shipping_address = 5;
  Money total = 6;
  Money total_payment = 7;
  Money amount_due = 8;
  repeated CartItem items = 9;
  repeated PaymentMethod payment_methods = 10;
  bool is_deleted = 11;
}

message NotificationMethod {
  string id = 1;
  oneof option {
    Email email = 2;
    Sms sms = 3;
    PushWeb push_web = 4;
    PushMobile push_mobile = 5;
  }
}

message Email {
  string address = 1;
  string subject = 2;
  string body = 3;
}

message Sms {
  string number = 1;
  string body = 2;
}

message PushWeb {
  string user_id = 1;
  string body = 2;
}

message PushMobile {
  string device_id = 1;
  string body = 2;
}
